--- a/WebApp/Areas/Admin/Views/Function/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Function/Index.cshtml
@@ -1,6 +1,5 @@
-﻿
-@{
-    ViewData["Title"] = "Function";
+﻿@{
+    ViewData["Title"] = "Danh mục";
 }
 
 @section Styles {
@@ -24,11 +23,11 @@
         <div class="page-title-box">
             <div class="page-title-right">
                 <ol class="breadcrumb m-0">
-                    <li class="breadcrumb-item"><a href="javascript: void(0);">Dashboard</a></li>
-                    <li class="breadcrumb-item active">Function Management</li>
+                    <li class="breadcrumb-item"><a href="javascript: void(0);">Bảng điều khiển</a></li>
+                    <li class="breadcrumb-item active">Quản lý danh mục</li>
                 </ol>
             </div>
-            <h4 class="page-title">Function Management</h4>
+            <h4 class="page-title">Quản lý danh mục</h4>
         </div>
     </div>
 </div>
