--- a/WebApp/Areas/Admin/Views/Login/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Login/Index.cshtml
@@ -6,13 +6,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Travico Portal - Admin</title>
+    <title>Booking Hotel - Admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="A fully featured admin which can be used to build CRM, CMS, etc." name="description">
     <meta content="Coderthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- App favicon -->
-    <link rel="icon" href="~/assets/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="icon" href="~/assets/admin/images/users/DQ.png" type="image/vnd.microsoft.icon">
 
     <!-- App css -->
     <link href="~/assets/admin/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -31,7 +31,7 @@
                 <div class="login-wrap">
                     <div class="text-center mb-4">
                         <a href="/">
-                            <span><img src="~/assets/landing-page/img/logo/logo_header.webp" /></span>
+                            <span><img src="~/assets/admin/images/users/DQ.png" /></span>
                         </a>
                     </div>
 
