--- a/WebApp/Areas/Admin/Views/User/_AddEditUser.cshtml
+++ b/WebApp/Areas/Admin/Views/User/_AddEditUser.cshtml
@@ -25,7 +25,8 @@
                                 <label for="txtTitle" class="control-label no-padding-right">Vai trò: <span style="color:red">*</span></label>
                                 <select class="custom-select" id="ddlRoleName" name="ddlRoleName">
                                     <option value="">Chọn vai trò</option>
-                                    @foreach(var item in Model){
+                                    @foreach (var item in Model)
+                                    {
                                         <option value="@item.Id">@item.Name</option>
                                     }
                                 </select>
@@ -47,7 +48,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="row removePass" >
+                                <div class="row removePass">
                                     <div class="col-sm-6">
                                         <label for="password" class="col-sm-auto control-label no-padding-right">Mật khẩu: <span style="color:red">*</span></label>
                                         <div class="col-sm-12">
@@ -92,7 +93,7 @@
                                 <div class="col-sm-10" style="display:none">
                                     <input type="text" class="form-control" id="txtImageShow" disabled />
                                     <input type="text" class="form-control" id="txtImage" name="txtImage" hidden />
-                                    <input type="file" id="fileInputImage" style="display:none"/>
+                                    <input type="file" id="fileInputImage" style="display:none" />
                                 </div>
                                 <div class="col-sm-2">
                                     <img id="imagePreview" src="~/assets/images/user.png" alt="Preview" style="max-width: 100px; max-height: 100px;" />
