--- a/WebApp/Areas/Admin/Views/Account/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Account/Index.cshtml
@@ -279,8 +279,8 @@
             </div>
         </div>
         <div class="submit-button">
-            <button type="button" id="btnSave" class="btn btn-success">Save</button>
-                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Cancel</button>
+            <button type="button" id="btnSave" class="btn btn-success">Lưu</button>
+                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Hủy bỏ</button>
         </div>
     </div>
 </div>
