--- a/WebApp/Areas/Admin/Views/User/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/User/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="page-title-box">
             <div class="page-title-right">
                 <ol class="breadcrumb m-0">
-                    <li class="breadcrumb-item"><a href="javascript: void(0);">Dashboard</a></li>
+                    <li class="breadcrumb-item"><a href="javascript: void(0);">Bảng điều khiển</a></li>
                     <li class="breadcrumb-item active">Danh sách nhân viên</li>
                 </ol>
             </div>
