--- a/WebApp/Areas/Admin/Views/User/_AddEditUser.cshtml
+++ b/WebApp/Areas/Admin/Views/User/_AddEditUser.cshtml
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="txtImage" class="col-sm-2 control-label no-padding-right">Hình ảnh</label>
+                            <label for="txtImage" class="col-sm-2 control-label no-padding-right">Hình ảnh:</label>
                             <div class="d-flex">
                                 <div class="col-sm-10" style="display:none">
                                     <input type="text" class="form-control" id="txtImageShow" disabled />
@@ -100,21 +100,21 @@
                                 </div>
                             </div>
                             <div class="col-sm-2 mt-1">
-                                <input type="button" style="width:100px" id="btnSelectImg" class="btn btn-primary" value="Browser" />
+                                <input type="button" style="width:100px" id="btnSelectImg" class="btn btn-primary" value="Chọn file" />
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="custom-control custom-checkbox pl-4">
                                 <input type="checkbox" class="custom-control-input" checked="checked" id="ckStatus" name="ckStatus">
-                                <label class="custom-control-label" for="ckStatus">Active</label>
+                                <label class="custom-control-label" for="ckStatus">Hành động</label>
                             </div>
                         </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" id="btnSave" class="btn btn-success">Save</button>
-                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Cancel</button>
+                <button type="button" id="btnSave" class="btn btn-success">Lưu</button>
+                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Hủy bỏ</button>
             </div>
         </div>
     </div>
