--- a/WebApp/Areas/Admin/Views/User/_ChangePassUser.cshtml
+++ b/WebApp/Areas/Admin/Views/User/_ChangePassUser.cshtml
@@ -27,8 +27,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" id="btn-save-change-password" class="btn btn-success">Save</button>
-                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Cancel</button>
+                <button type="button" id="btn-save-change-password" class="btn btn-success">Lưu</button>
+                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Hủy bỏ</button>
             </div>
         </div>
     </div>
