--- a/WebApp/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -8,11 +8,9 @@
         <div class="page-title-box">
             <div class="page-title-right">
                 <ol class="breadcrumb m-0">
-                    <li class="breadcrumb-item"><a href="javascript: void(0);">Minton</a></li>
-                    <li class="breadcrumb-item active">Dashboard</li>
+                    <li class="breadcrumb-item active">Bảng điều khiển</li>
                 </ol>
             </div>
-            <h4 class="page-title">Welcome !</h4>
         </div>
     </div>
 </div>
