--- a/WebApp/Areas/Admin/Views/Function/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Function/Index.cshtml
@@ -40,13 +40,16 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-sm-12 text-right pb-3">
-                        <button type="submit" class="btn btn-primary" id="btn-create" data-animation="fadein">Add New</button>
+                        <button type="submit" class="btn btn-primary" id="btn-create" data-animation="fadein">
+                            <i class="fe-plus-circle"></i>
+                            Tạo mới
+                        </button>
                     </div>
                 </div>
                 <ul id="treeFunction"></ul>
                 <div id="contextMenu" class="easyui-menu" style="width:120px;">
-                    <div id="btn-edit" data-options="iconCls:'icon-edit'">Edit</div>
-                    <div id="btn-delete" data-options="iconCls:'icon-remove'">Delete</div>
+                    <div id="btn-edit" data-options="iconCls:'icon-edit'">Sửa</div>
+                    <div id="btn-delete" data-options="iconCls:'icon-remove'">Xóa</div>
                 </div>
             </div> <!-- end card body-->
         </div> <!-- end card -->
