--- a/WebApp/Areas/Admin/Views/Function/_AddEditModal.cshtml
+++ b/WebApp/Areas/Admin/Views/Function/_AddEditModal.cshtml
@@ -9,16 +9,16 @@
                 <form class="form-horizontal" role="form" id="formMaintainance">
                     <div class="form-group">
                         <input type="hidden" class="form-control" id="hidId" name="hidId">
-                        <label for="txtFunctionId" class="col-sm-auto control-label no-padding-right">FunctionId(*)</label>
+                        <label for="txtFunctionId" class="col-sm-auto control-label no-padding-right">Id chức năng(*)</label>
                         <div class="col-sm-12">
-                            <input type="text" class="form-control" id="txtFunctionId" name="txtFunctionId" placeholder="Function Id">
+                            <input type="text" class="form-control" id="txtFunctionId" name="txtFunctionId" placeholder="Id chức năng">
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="txtName" class="col-sm-auto control-label no-padding-right">Name(*)</label>
+                        <label for="txtName" class="col-sm-auto control-label no-padding-right">Tên(*)</label>
                         <div class="col-sm-12">
-                            <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Name">
+                            <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Tên">
                         </div>
                     </div>
 
@@ -30,30 +30,30 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="txtParentId" class="col-sm-auto control-label no-padding-right">ParentId</label>
+                        <label for="txtParentId" class="col-sm-auto control-label no-padding-right">Id chức năng cha</label>
                         <div class="col-sm-12">
-                            <input class="form-control" id="txtParentId" name="txtParentId" placeholder="ParentId">
+                            <input class="form-control" id="txtParentId" name="txtParentId" placeholder="Id chức năng cha">
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="txtIconCss" class="col-sm-auto control-label no-padding-right">Icon Css</label>
+                        <label for="txtIconCss" class="col-sm-auto control-label no-padding-right">Biểu tượng Css</label>
                         <div class="col-sm-12">
-                            <input type="text" class="form-control" id="txtIconCss" name="txtIconCss" placeholder="Icon Css">
+                            <input type="text" class="form-control" id="txtIconCss" name="txtIconCss" placeholder="Biểu tượng Css">
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="txtSortOrder" class="col-sm-auto control-label no-padding-right">Sort Order</label>
+                        <label for="txtSortOrder" class="col-sm-auto control-label no-padding-right">Thứ tự sắp xếp</label>
                         <div class="col-sm-12">
-                            <input type="text" class="form-control" id="txtSortOrder" name="txtSortOrder" placeholder="txtSortOrder">
+                            <input type="text" class="form-control" id="txtSortOrder" name="txtSortOrder" placeholder="Thứ tự sắp xếp">
                         </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" id="btnSave" class="btn btn-success">Save</button>
-                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Cancel</button>
+                <button type="button" id="btnSave" class="btn btn-success">Lưu</button>
+                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Hủy bỏ</button>
             </div>
         </div>
     </div>
