Add Feature RoomTypes and Services

--- a/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-6">
-                            2024 &copy; Power by <a href="https://nineplus.com.vn">NinePlus Solution</a>
+                            2024 &copy; Power by <a href="https://www.facebook.com/nvd.0204/">Uncle Đạt</a>
                         </div>
                         <div class="col-md-6">
                             <div class="text-md-right footer-links d-none d-sm-block">
