--- a/WebApp/Areas/Admin/Views/Shared/_PaginationPartial.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_PaginationPartial.cshtml
@@ -1,4 +1,4 @@
-<div class="row">
+﻿<div class="row">
     <div class="col-sm-5">
         <div class="dataTables_info" id="datatable-checkbox_info" role="status" aria-live="polite">
             <select id="ddl-show-page" class="custom-select custom-select-sm">
@@ -7,7 +7,7 @@
                 <option value="50">50</option>
                 <option value="100">100</option>
             </select>
-            Total: <strong id="lbl-total-records"></strong>
+            Tổng: <strong id="lbl-total-records"></strong>
         </div>
     </div>
     <div class="col-sm-7">
