--- a/WebApp/Areas/Admin/Views/User/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/User/Index.cshtml
@@ -52,23 +52,22 @@
                     <div class="col-sm-2 text-right pb-3">
                         <button type="submit" class="btn btn-primary" id="btn-create" data-animation="fadein">
                             <i class="fe-plus-circle"></i>
-                            Tạo nhân viên
+                            Tạo người dùng
                         </button>
                     </div>
                 </div>
                 <table id="datatable-buttons" class="table table-striped dt-responsive nowrap">
                     <thead>
                         <tr>
-                            <th>SỐ</th>
-                            <th>ẢNH</th>
-                            <th>HỌ TÊN</th>
-                            <th>EMAIL/TÊN ĐĂNG NHẬP</th>
-                            <th>VAI TRÒ</th>
-                            <th>NGÀY SINH</th>
-                            <th>ĐIỆN THOẠI</th>
-                            <th>TRẠNG THÁI</th>
-                            <th>NGÀY TẠO</th>
-                            <th class="action-columns">THAO TÁC</th>
+                            <th>Stt</th>
+                            <th>Ảnh</th>
+                            <th>Họ tên</th>
+                            <th>Email/Tên đăng nhập</th>
+                            <th>Vai trò</th>
+                            <th>Ngày sinh</th>
+                            <th>Điện thoại</th>
+                            <th>Trạng thái</th>
+                            <th class="action-columns">Thao tác</th>
                         </tr>
                     </thead>
                     <tbody id="tbl-content"></tbody>
@@ -91,7 +90,6 @@
         <td>{{DateOfBirth}}</td>
         <td>{{PhoneNumber}}</td>
         <td>{{{Status}}}</td>
-        <td>{{{CreatedOn}}}</td>
         <td class="text-center">
             <a href="#" data-id="{{Id}}" class="btn btn-xs btn-info btn-change-pass" ><i class="remixicon-lock-2-line"></i></a>
             <a href="#" data-id="{{Id}}" class="btn btn-xs btn-info btn-edit" ><i class="fe-edit-2"></i></a>
