--- a/WebApp/Areas/Admin/Views/User/_AddEditUser.cshtml
+++ b/WebApp/Areas/Admin/Views/User/_AddEditUser.cshtml
@@ -22,7 +22,7 @@
                         <div class="tab-pane active show" id="english">
                             <div class="form-group col-sm-12">
                                 <input type="hidden" id="hidId" value="0" />
-                                <label for="txtTitle" class="control-label no-padding-right">Vai trò: <span style="color:red">*</span></label>
+                                <label for="txtTitle" class="control-label no-padding-right">Vai trò <span class="text-danger">*</span></label>
                                 <select class="custom-select" id="ddlRoleName" name="ddlRoleName">
                                     <option value="">Chọn vai trò</option>
                                     @foreach (var item in Model)
@@ -34,13 +34,13 @@
                             <div class="form-group">
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <label for="fullName" class="col-sm-auto control-label no-padding-right">Tên đầy đủ: <span style="color:red">*</span></label>
+                                        <label for="fullName" class="col-sm-auto control-label no-padding-right">Tên đầy đủ <span class="text-danger">*</span></label>
                                         <div class="col-sm-12">
                                             <input type="text" class="form-control" id="fullName" name="fullName">
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
-                                        <label for="email" class="col-sm-auto control-label no-padding-right">Email/Tên đăng nhập: <span style="color:red">*</span></label>
+                                        <label for="email" class="col-sm-auto control-label no-padding-right">Email/Tên đăng nhập <span class="text-danger">*</span></label>
                                         <div class="col-sm-12">
                                             <input type="text" class="form-control" id="email" name="email">
                                         </div>
@@ -50,13 +50,13 @@
                             <div class="form-group">
                                 <div class="row removePass">
                                     <div class="col-sm-6">
-                                        <label for="password" class="col-sm-auto control-label no-padding-right">Mật khẩu: <span style="color:red">*</span></label>
+                                        <label for="password" class="col-sm-auto control-label no-padding-right">Mật khẩu <span class="text-danger"></label>
                                         <div class="col-sm-12">
                                             <input type="text" class="form-control" id="password" name="password">
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
-                                        <label for="confirmPassword" class="col-sm-auto control-label no-padding-right">Nhập lại mật khẩu: <span style="color:red">*</span></label>
+                                        <label for="confirmPassword" class="col-sm-auto control-label no-padding-right">Nhập lại mật khẩu <span class="text-danger"></label>
                                         <div class="col-sm-12">
                                             <input type="text" class="form-control" id="confirmPassword" name="confirmPassword">
                                             <span id="passwordMessage"></span>
@@ -67,13 +67,13 @@
                             <div class="form-group">
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <label for="phoneNumber" class="col-sm-auto control-label no-padding-right">Số điện thoại:</label>
+                                        <label for="phoneNumber" class="col-sm-auto control-label no-padding-right">Số điện thoại </label>
                                         <div class="col-sm-12">
                                             <input type="text" class="form-control" id="phoneNumber" name="phoneNumber">
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
-                                        <label for="dateOfBirth" class="col-sm-auto control-label no-padding-right">Ngày sinh:</label>
+                                        <label for="dateOfBirth" class="col-sm-auto control-label no-padding-right">Ngày sinh </label>
                                         <div class="col-sm-12">
                                             <input type="date" class="form-control" id="dateOfBirth" name="dateOfBirth">
                                         </div>
@@ -81,14 +81,14 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="address" class="col-sm-auto control-label no-padding-right">Địa chỉ:</label>
+                                <label for="address" class="col-sm-auto control-label no-padding-right">Địa chỉ </label>
                                 <div class="col-sm-12">
                                     <textarea type="text" class="form-control" id="address" name="address"></textarea>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="txtImage" class="col-sm-2 control-label no-padding-right">Hình ảnh:</label>
+                            <label for="txtImage" class="col-sm-2 control-label no-padding-right">Hình ảnh </label>
                             <div class="d-flex">
                                 <div class="col-sm-10" style="display:none">
                                     <input type="text" class="form-control" id="txtImageShow" disabled />
@@ -100,13 +100,13 @@
                                 </div>
                             </div>
                             <div class="col-sm-2 mt-1">
-                                <input type="button" style="width:100px" id="btnSelectImg" class="btn btn-primary" value="Chọn file" />
+                                <input type="button" style="width:100px" id="btnSelectImg" class="btn btn-primary" value="Chọn ảnh" />
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="custom-control custom-checkbox pl-4">
                                 <input type="checkbox" class="custom-control-input" checked="checked" id="ckStatus" name="ckStatus">
-                                <label class="custom-control-label" for="ckStatus">Hành động</label>
+                                <label class="custom-control-label" for="ckStatus">Kích hoạt</label>
                             </div>
                         </div>
                     </div>
