--- a/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -62,9 +62,9 @@
                         </div>
                         <div class="col-md-6">
                             <div class="text-md-right footer-links d-none d-sm-block">
-                                <a href="javascript:void(0);">About Us</a>
-                                <a href="javascript:void(0);">Help</a>
-                                <a href="javascript:void(0);">Contact Us</a>
+                                <a href="javascript:void(0);">Về chúng tôi</a>
+                                <a href="javascript:void(0);">Trợ giúp</a>
+                                <a href="javascript:void(0);">Liên hệ</a>
                             </div>
                         </div>
                     </div>
