--- a/WebApp/Areas/Admin/Views/Shared/_TopBarPartial.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_TopBarPartial.cshtml
@@ -149,7 +149,7 @@
                 <!-- item-->
                 <a href="javascript:void(0);" onclick="logout();" class="dropdown-item notify-item">
                     <i class="remixicon-logout-box-line"></i>
-                    <span>Logout</span>
+                    <span>Đăng xuất</span>
                 </a>
 
             </div>
