--- a/WebApp/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="text-right">
                 <h3 class="mb-1"> @Model.CountEmployee </h3>
-                <p class="text-muted mb-1">Tổng số nhân viên</p>
+                <p class="text-muted mb-1">Tổng số người dùng</p>
             </div>
         </div>
     </div><!-- end col -->
