--- a/WebApp/Areas/Admin/Views/RoomTypes/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/RoomTypes/Index.cshtml
@@ -49,7 +49,7 @@
 
                 <table id="datatable-buttons" class="table table-striped dt-responsive nowrap">
                     <thead>
-                        <tr>
+                        <tr class="font-weight-bold text-dark">
                             <th>Stt</th>
                             <th>Loại phòng</th>
                             <th>Hình ảnh</th>
