--- a/WebApp/Areas/Admin/Views/Role/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Role/Index.cshtml
@@ -19,11 +19,11 @@
         <div class="page-title-box">
             <div class="page-title-right">
                 <ol class="breadcrumb m-0">
-                    <li class="breadcrumb-item"><a href="javascript: void(0);">Dashboard</a></li>
-                    <li class="breadcrumb-item active">Quản lí Vai trò</li>
+                    <li class="breadcrumb-item"><a href="javascript: void(0);">Bảng điều khiển</a></li>
+                    <li class="breadcrumb-item active">Quản lí vai trò</li>
                 </ol>
             </div>
-            <h4 class="page-title">Quản lí Vai trò</h4>
+            <h4 class="page-title">Quản lí vai trò</h4>
         </div>
     </div>
 </div>
@@ -50,13 +50,13 @@
 
                 <table id="datatable-buttons" class="table table-striped dt-responsive nowrap">
                     <thead>
-                        <tr>
-                            <th>No</th>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Created User</th>
-                            <th>Created Date</th>
-                            <th class="action-columns">Action</th>
+                        <tr class="font-weight-bold text-dark">
+                            <th>Stt</th>
+                            <th>Vai trò</th>
+                            <th>Mô tả</th>
+                            <th>Người tạo</th>
+                            <th>Ngày tạo</th>
+                            <th class="action-columns">Hành động</th>
                         </tr>
                     </thead>
                     <tbody id="tbl-content"></tbody>
