--- a/WebApp/Areas/Admin/Views/Role/_AssignPermission.cshtml
+++ b/WebApp/Areas/Admin/Views/Role/_AssignPermission.cshtml
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Assign Permission</h4>
+                <h4 class="modal-title">Gán quyền</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
             </div>
             <div class="modal-body">
@@ -12,29 +12,29 @@
                         <table class="table table-hover tree" id="tblFunction">
                             <thead class="bordered-darkorange">
                                 <tr>
-                                    <th>Function name</th>
+                                    <th>Tên chưc năng</th>
                                     <th>
                                         <label>
                                             <input type="checkbox" id="ckCheckAllView">
-                                            <span class="text">View</span>
+                                            <span class="text">Xem</span>
                                         </label>
                                     </th>
                                     <th>
                                         <label>
                                             <input type="checkbox" id="ckCheckAllCreate">
-                                            <span class="text">Create</span>
+                                            <span class="text">Tạo</span>
                                         </label>
                                     </th>
                                     <th>
                                         <label>
                                             <input type="checkbox" id="ckCheckAllEdit">
-                                            <span class="text">Update</span>
+                                            <span class="text">Cập nhật</span>
                                         </label>
                                     </th>
                                     <th>
                                         <label>
                                             <input type="checkbox" id="ckCheckAllDelete">
-                                            <span class="text">Delete</span>
+                                            <span class="text">Xóa</span>
                                         </label>
                                     </th>
                                 </tr>
@@ -47,25 +47,25 @@
                                 <td>
                                     <label>
                                         <input type="checkbox" value="{{Id}}" class="ckView">
-                                        <span class="text">Allow</span>
+                                        <span class="text">Cho phép</span>
                                     </label>
                                 </td>
                                 <td>
                                     <label>
                                         <input type="checkbox" value="{{Id}}" class="ckAdd">
-                                        <span class="text">Allow</span>
+                                        <span class="text">Cho phép</span>
                                     </label>
                                 </td>
                                 <td>
                                     <label>
                                         <input type="checkbox" value="{{Id}}" class="ckEdit">
-                                        <span class="text">Allow</span>
+                                        <span class="text">Cho phép</span>
                                     </label>
                                 </td>
                                 <td>
                                     <label>
                                         <input type="checkbox" value="{{Id}}" class="ckDelete">
-                                        <span class="text">Allow</span>
+                                        <span class="text">Cho phép</span>
                                     </label>
                                 </td>
                             </tr>
@@ -74,8 +74,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" id="btnSavePermission" class="btn btn-success">Save</button>
-                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Cancel</button>
+                <button type="button" id="btnSavePermission" class="btn btn-success">Lưu</button>
+                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Hủy bỏ</button>
             </div>
         </div>
     </div>
