--- a/WebApp/Areas/Admin/Views/Role/_AddEditModal.cshtml
+++ b/WebApp/Areas/Admin/Views/Role/_AddEditModal.cshtml
@@ -9,14 +9,14 @@
                 <form class="form-horizontal" role="form" id="formMaintainance">
                     <div class="form-group">
                         <input type="hidden" id="hidId" value="0" />
-                        <label for="txtName" class="col-sm-auto control-label no-padding-right">Name(*)</label>
+                        <label for="txtName" class="col-sm-auto control-label no-padding-right">Vai trò <span class="text-danger">*</span></label>
                         <div class="col-sm-12">
                             <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Name">
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="txtDescription" class="col-sm-auto control-label no-padding-right">Description</label>
+                        <label for="txtDescription" class="col-sm-auto control-label no-padding-right">Mô tả </label>
                         <div class="col-sm-12">
                             <textarea rows="4" class="form-control" id="txtDescription" name="txtDescription" placeholder="Description"></textarea>
                         </div>
@@ -24,8 +24,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" id="btnSave" class="btn btn-success">Save</button>
-                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Cancel</button>
+                <button type="button" id="btnSave" class="btn btn-success">Lưu</button>
+                <button type="button" id="btnCancel" data-dismiss="modal" class="btn btn-danger">Hủy bỏ</button>
             </div>
         </div>
     </div>
