--- a/WebApp/Areas/Admin/Views/News/_AddEditModal.cshtml
+++ b/WebApp/Areas/Admin/Views/News/_AddEditModal.cshtml
@@ -10,9 +10,9 @@
                     <div class="tab-content">
                         <div class="form-group">
                             <input type="hidden" id="hidId" value="0" />
-                            <label for="txtName" class="col-sm-auto control-label no-padding-right">Dịch vụ <span class="text-danger">*</span></label>
+                            <label for="txtName" class="col-sm-auto control-label no-padding-right">Tiêu đề </label>
                             <div class="col-sm-12">
-                                <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Tên dịch vụ">
+                                <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Tiêu đề">
                             </div>
                         </div>
 
@@ -37,6 +37,22 @@
                             </div>
                             <div class="col-sm-2 mt-1">
                                 <input type="button" style="width:100px" id="btnSelectImg" class="btn btn-primary" value="Chọn ảnh" />
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="form-group">
+                                <div class="custom-control custom-checkbox pl-4">
+                                    <input type="checkbox" class="custom-control-input" checked="checked" id="ckStatus" name="ckStatus">
+                                    <label class="custom-control-label" for="ckStatus">Trạng thái</label>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="custom-control custom-checkbox pl-4">
+                                    <input type="checkbox" class="custom-control-input" checked="checked" id="ckStatus" name="ckStatus">
+                                    <label class="custom-control-label" for="ckStatus">Nổi bật</label>
+                                </div>
                             </div>
                         </div>
                     </div>
