--- a/WebApp/Areas/Admin/Views/News/_AddEditModal.cshtml
+++ b/WebApp/Areas/Admin/Views/News/_AddEditModal.cshtml
@@ -41,17 +41,21 @@
                         </div>
 
                         <div class="row">
-                            <div class="form-group">
-                                <div class="custom-control custom-checkbox pl-4">
-                                    <input type="checkbox" class="custom-control-input" checked="checked" id="ckStatus" name="ckStatus">
-                                    <label class="custom-control-label" for="ckStatus">Trạng thái</label>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <div class="custom-control custom-checkbox pl-4">
+                                        <input type="checkbox" class="custom-control-input" checked="checked" id="ckStatus" name="ckStatus">
+                                        <label class="custom-control-label" for="ckStatus">Trạng thái</label>
+                                    </div>
                                 </div>
                             </div>
 
-                            <div class="form-group">
-                                <div class="custom-control custom-checkbox pl-4">
-                                    <input type="checkbox" class="custom-control-input" checked="checked" id="ckStatus" name="ckStatus">
-                                    <label class="custom-control-label" for="ckStatus">Nổi bật</label>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <div class="custom-control custom-checkbox pl-4">
+                                        <input type="checkbox" class="custom-control-input" checked="checked" id="ckHot" name="ckStatus">
+                                        <label class="custom-control-label" for="ckHot">Nổi bật</label>
+                                    </div>
                                 </div>
                             </div>
                         </div>
