--- a/WebApp/Areas/Admin/Views/CostOverrun/_AddEditModal.cshtml
+++ b/WebApp/Areas/Admin/Views/CostOverrun/_AddEditModal.cshtml
@@ -10,40 +10,38 @@
                     <div class="tab-content">
                         <div class="form-group">
                             <input type="hidden" id="hidId" value="0" />
-                            <label for="txtTitle" class="col-sm-auto control-label no-padding-right">Tiêu đề </label>
+                            <label for="txtName" class="col-sm-auto control-label no-padding-right">Tiêu đề </label>
                             <div class="col-sm-12">
-                                <input type="text" class="form-control" id="txtTitle" name="txtTitle" placeholder="Tiêu đề">
+                                <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Tiêu đề">
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label for="txtContent" class="col-sm-auto control-label no-padding-right">Nội dung </label>
+                            <label for="txtDescription" class="col-sm-auto control-label no-padding-right">Mô tả </label>
                             <div class="col-sm-12">
-                                <textarea type="text" class="form-control" id="txtContent" name="txtContent" placeholder="Nội dung"></textarea>
+                                <textarea type="text" class="form-control" id="txtDescription" name="txtDescription" placeholder="Mô tả"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="txtImage" class="col-sm-2 control-label no-padding-right">Hình ảnh</label>
+                            <div class="d-flex">
+                                <div class="col-sm-10" style="display:none">
+                                    <input type="text" class="form-control" id="txtImageShow" disabled />
+                                    <input type="text" class="form-control" id="txtImage" name="txtImage" hidden />
+                                    <input type="file" id="fileInputImage" style="display:none" />
+                                </div>
+                                <div class="col-sm-2">
+                                    <img id="imagePreview" src="~/assets/images/user.png" alt="Preview" style="max-width: 100px; max-height: 100px;" />
+                                </div>
+                            </div>
+                            <div class="col-sm-2 mt-1">
+                                <input type="button" style="width:100px" id="btnSelectImg" class="btn btn-primary" value="Chọn ảnh" />
                             </div>
                         </div>
 
                         <div class="row">
-                            <div class="col-sm-4">
-                                <div class="form-group">
-                                    <label for="txtImage" class="col-sm-auto control-label no-padding-right">Hình ảnh</label>
-                                    <div class="d-flex">
-                                        <div class="col-sm-10" style="display:none">
-                                            <input type="text" class="form-control" id="txtImageShow" disabled />
-                                            <input type="text" class="form-control" id="txtImage" name="txtImage" hidden />
-                                            <input type="file" id="fileInputImage" style="display:none" />
-                                        </div>
-                                        <div class="col-sm-2">
-                                            <img id="imagePreview" src="~/assets/images/user.png" alt="Preview" style="max-width: 100px; max-height: 100px;" />
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-2 mt-1">
-                                        <input type="button" style="width:100px" id="btnSelectImg" class="btn btn-primary" value="Chọn ảnh" />
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-4">
+                            <div class="col-sm-6">
                                 <div class="form-group">
                                     <div class="custom-control custom-checkbox pl-4">
                                         <input type="checkbox" class="custom-control-input" checked="checked" id="ckStatus" name="ckStatus">
@@ -52,10 +50,10 @@
                                 </div>
                             </div>
 
-                            <div class="col-sm-4">
+                            <div class="col-sm-6">
                                 <div class="form-group">
                                     <div class="custom-control custom-checkbox pl-4">
-                                        <input type="checkbox" class="custom-control-input" checked="checked" id="ckHot" name="ckHot">
+                                        <input type="checkbox" class="custom-control-input" checked="checked" id="ckHot" name="ckStatus">
                                         <label class="custom-control-label" for="ckHot">Nổi bật</label>
                                     </div>
                                 </div>
