--- a/WebApp/Areas/Admin/Views/Shared/_TopBarPartial.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_TopBarPartial.cshtml
@@ -135,7 +135,7 @@
             <div class="dropdown-menu dropdown-menu-right profile-dropdown ">
                 <!-- item-->
                 <div class="dropdown-header noti-title">
-                    <h6 class="text-overflow m-0">Welcome !</h6>
+                    <h6 class="text-overflow m-0">Chào mừng!</h6>
                 </div>
 
                 <!-- item-->
