--- a/WebApp/Areas/Admin/Views/User/_ChangePassUser.cshtml
+++ b/WebApp/Areas/Admin/Views/User/_ChangePassUser.cshtml
@@ -10,13 +10,13 @@
                     <div class="form-group">
                         <div class="row removePass">
                             <div class="col-sm-6">
-                                <label for="passwordNew" class="col-sm-auto control-label no-padding-right">Mật khẩu: <span style="color:red">*</span></label>
+                                <label for="passwordNew" class="col-sm-auto control-label no-padding-right">Mật khẩu <span class="text-danger">*</span></label>
                                 <div class="col-sm-12">
                                     <input type="text" class="form-control" id="passwordNew" name="passwordNew">
                                 </div>
                             </div>
                             <div class="col-sm-6">
-                                <label for="confirmPasswordNew" class="col-sm-auto control-label no-padding-right">Nhập lại mật khẩu: <span style="color:red">*</span></label>
+                                <label for="confirmPasswordNew" class="col-sm-auto control-label no-padding-right">Nhập lại mật khẩu <span class="text-danger">*</span></label>
                                 <div class="col-sm-12">
                                     <input type="text" class="form-control" id="confirmPasswordNew" name="confirmPasswordNew">
                                     <span id="passwordMessageChange"></span>
