--- a/WebApp/Areas/Admin/Views/CostOverrun/_AddEditModal.cshtml
+++ b/WebApp/Areas/Admin/Views/CostOverrun/_AddEditModal.cshtml
@@ -10,9 +10,16 @@
                     <div class="tab-content">
                         <div class="form-group">
                             <input type="hidden" id="hidId" value="0" />
-                            <label for="txtName" class="col-sm-auto control-label no-padding-right">Tiêu đề </label>
+                            <label for="txtName" class="col-sm-auto control-label no-padding-right">Tên chi phí </label>
                             <div class="col-sm-12">
-                                <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Tiêu đề">
+                                <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Tên chi phí">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="txtPrice" class="col-sm-auto control-label no-padding-right">Giá (VND) </label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control" id="txtPrice" name="txtPrice" placeholder="Giá">
                             </div>
                         </div>
 
@@ -37,26 +44,6 @@
                             </div>
                             <div class="col-sm-2 mt-1">
                                 <input type="button" style="width:100px" id="btnSelectImg" class="btn btn-primary" value="Chọn ảnh" />
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <div class="custom-control custom-checkbox pl-4">
-                                        <input type="checkbox" class="custom-control-input" checked="checked" id="ckStatus" name="ckStatus">
-                                        <label class="custom-control-label" for="ckStatus">Trạng thái</label>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <div class="custom-control custom-checkbox pl-4">
-                                        <input type="checkbox" class="custom-control-input" checked="checked" id="ckHot" name="ckStatus">
-                                        <label class="custom-control-label" for="ckHot">Nổi bật</label>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
