--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -42,19 +42,19 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav ml-auto">
-                        <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="accomodation.html">Accomodation</a></li>
-                        <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/about-us">About us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/room">Room</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/#">Gallery</a></li>
                         <li class="nav-item submenu dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Details</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/blog-details">Blog Details</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="elements.html">Elemests</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/#">Elemests</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -115,14 +115,14 @@
                     <div class="single-footer-widget instafeed">
                         <h6 class="footer_title">InstaFeed</h6>
                         <ul class="list_style instafeed d-flex flex-wrap">
-                            <li><img src="image/instagram/Image-01.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-02.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-03.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-04.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-05.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-06.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-07.jpg" alt=""></li>
-                            <li><img src="image/instagram/Image-08.jpg" alt=""></li>
+                            <li><img src="~/assets/landing-page/image/instagram/Image-01.jpg" alt=""></li>
+                            <li><img src="~/assets/landing-page/image/instagram/Image-02.jpg" alt=""></li>
+                            <li><img src="~/assets/landing-page/image/instagram/Image-03.jpg" alt=""></li>
+                            <li><img src="~/assets/landing-page/image/instagram/Image-04.jpg" alt=""></li>
+                            <li><img src="~/assets/landing-page/image/instagram/Image-05.jpg" alt=""></li>
+                            <li><img src="~/assets/landing-page/image/instagram/Image-06.jpg" alt=""></li>
+                            <li><img src="~/assets/landing-page/image/instagram/Image-07.jpg" alt=""></li>
+                            <li><img src="~/assets/landing-page/image/instagram/Image-08.jpg" alt=""></li>
                         </ul>
                     </div>
                 </div>
